added pop-up events

--- a/index.html
+++ b/index.html
@@ -28,5 +28,36 @@
         <div id="calendarDays" class="days"></div>
     </div>
 
+    <!-- EVENT POPUP -->
+    <div id="eventPopup" class="popup hidden">
+        <h3>Add Event</h3>
+
+        <label>Event Title:</label>
+        <input type="text" id="eventTitle">
+
+        <label>Time:</label>
+        <input type="time" id="eventTime">
+
+        <label>Repeat:</label>
+        <select id="eventRepeat">
+            <option value="once">Once</option>
+            <option value="daily">Everyday</option>
+        </select>
+
+        <label>Notify Before:</label>
+        <select id="eventNotify">
+            <option value="0">At exact time</option>
+            <option value="5">5 minutes before</option>
+            <option value="10">10 minutes before</option>
+            <option value="30">30 minutes before</option>
+            <option value="60">1 hour before</option>
+        </select>
+
+        <button id="saveEvent">Save Event</button>
+        <button id="closePopup">Cancel</button>
+    </div>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
